squish those images close together to avoid wasted space

--- a/sites/all/themes/bulmabug/css/bulma-bug.css
+++ b/sites/all/themes/bulmabug/css/bulma-bug.css
@@ -761,3 +761,7 @@ a:hover,
 .bg-image-list .columns {
   align-items: flex-end;
 }
+
+.bg-image-list .column {
+    padding: 0.15rem;
+}
